--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "acl": "^0.4.9",
     "bcrypt": "^0.8.6",
     "express": "^4.13.4",
+    "googleapis": "^5.2.1",
     "moment": "^2.13.0",
     "mongoose": "^4.4.16",
     "morgan": "^1.7.0",
     "passport": "^0.3.2",
+    "passport-meetup-oauth2": "0.0.2",
     "xml2js": "^0.4.16"
   },
   "devDependencies": {
