--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "mongoose": "^4.4.16",
     "morgan": "^1.7.0",
     "passport": "^0.3.2",
+    "passport-google-oauth": "^1.0.0",
+    "passport-local": "^1.0.0",
     "passport-meetup-oauth2": "0.0.2",
     "xml2js": "^0.4.16"
   },
