--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
   "dependencies": {
     "acl": "^0.4.9",
     "bcrypt": "^0.8.6",
+    "body-parser": "^1.15.1",
+    "cookie-parser": "^1.4.2",
     "express": "^4.13.4",
+    "express-session": "^1.13.0",
     "moment": "^2.13.0",
     "mongoose": "^4.4.16",
     "morgan": "^1.7.0",
@@ -31,6 +34,7 @@
     "passport-google-oauth": "^1.0.0",
     "passport-local": "^1.0.0",
     "passport-meetup-oauth2": "0.0.2",
+    "pem": "^1.8.3",
     "xml2js": "^0.4.16"
   },
   "devDependencies": {
