[ADD] passport is working with meetup and google now.
bCrypt is working

--- a/package.json
+++ b/package.json
@@ -30,10 +30,11 @@
     "moment": "^2.13.0",
     "mongoose": "^4.4.16",
     "morgan": "^1.7.0",
+    "node-gyp": "^3.3.1",
     "passport": "^0.3.2",
-    "passport-google-oauth": "^1.0.0",
+    "passport-google-oauth20": "^1.0.0",
     "passport-local": "^1.0.0",
-    "passport-meetup-oauth2": "0.0.2",
+    "passport-meetup": "^1.0.0",
     "pem": "^1.8.3",
     "xml2js": "^0.4.16"
   },
