--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "cookie-parser": "^1.4.2",
     "express": "^4.13.4",
     "express-session": "^1.13.0",
+    "helmet": "^2.1.1",
     "moment": "^2.13.0",
     "moment-timezone": "^0.5.4",
     "mongoose": "^4.4.16",
